.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727234000/admission-mutating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T15:04:15Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727234000.echo.example.com
  resourceVersion: "2226027"
  uid: bf4ff623-c1f8-4658-96d6-0101e50a366a
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lVYXo4NXBsUFR0Yit4bmZMeElFQTFJVWNFVWR3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERlNNRkFHQTFVRUF3eEpaV05vYnkxemJXOXJaUzFqYjIxaWFXNWxaQzFzYVhabExXTnZiV0pwYm1WawpMVEl3TWpZd056STNNak0wTURBd0xXVmphRzh0YjNCbGNtRjBiM0lnZDJWaWFHOXZheUJEUVRBZUZ3MHlOakEzCk1qY3hOVEEwTVRSYUZ3MHlOekEzTWpjeE5UQTBNVFJhTUZReFVqQlFCZ05WQkFNTVNXVmphRzh0YzIxdmEyVXQKWTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bFpDMHlNREkyTURjeU56SXpOREF3TUMxbFkyaHZMVzl3WlhKaApkRzl5SUhkbFltaH [...]
    service:
      name: echo-smoke-combined-live-combined-20260727234000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727234000
      path: /mutate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727234000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
